<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/txtTitle"
        android:textSize="32sp" />

    <EditText
        android:id="@+id/txtMonthlyPayment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtTitle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:textSize="25sp"
        android:hint="@string/hint1"
        android:ems="10"
        android:inputType="numberDecimal" />

    <EditText
        android:id="@+id/txtYears"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtMonthlyPayment"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:textSize="25sp"
        android:hint="@string/hint2"
        android:ems="10"
        android:inputType="number" />

    <EditText
        android:id="@+id/txtPrincipal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtYears"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:textSize="25sp"
        android:hint="@string/hint3"
        android:ems="10"
        android:inputType="numberDecimal" />

    <Button
        android:id="@+id/btnCompute"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtPrincipal"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="28dp"
        android:textSize="35sp"
        android:text="@string/btnCompute" />

    <ImageView
        android:id="@+id/imgOpening"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnCompute"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/imgDescription"
        android:layout_marginTop="5dp"
        app:srcCompat="@drawable/opening" />


</RelativeLayout>